--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width; initial-scale=1">
 		<title>Gaurav Munjal - Koder!</title>
         <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato">
 		<link rel="stylesheet" href="css/style.css">
