Rewrite in ember-cli

--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width; initial-scale=1">
-		<title>Gaurav Munjal - Koder!</title>
-        <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato">
-		<link rel="stylesheet" href="css/style.css">
-		<link rel="shortcut icon" href="http://www.gravatar.com/avatar/dee517db7786d428590540b647a5d1f3?s=16">
-		<script data-main="js/main" src="js/libs/require-2.1.8.js"></script>
-	</head>
-	<body>
-	</body>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>PersonalSite</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <base href="/">
+<meta name="personal-site/config/environment" content="%7B%22modulePrefix%22%3A%22personal-site%22%2C%22environment%22%3A%22production%22%2C%22baseURL%22%3A%22/%22%2C%22locationType%22%3A%22auto%22%2C%22EmberENV%22%3A%7B%22FEATURES%22%3A%7B%7D%7D%2C%22APP%22%3A%7B%7D%2C%22contentSecurityPolicyHeader%22%3A%22Content-Security-Policy-Report-Only%22%2C%22contentSecurityPolicy%22%3A%7B%22default-src%22%3A%22%27none%27%22%2C%22script-src%22%3A%22%27self%27%22%2C%22font-src%22%3A%22%27self%27%22%2C%22connect-src%22%3A%22%27self%27%22%2C%22img-src%22%3A%22%27self%27%22%2C%22style-src%22%3A%22%27self%27%22%2C%22media-src%22%3A%22%27self%27%22%7D%2C%22exportApplicationGlobal%22%3Afalse%7D">
+
+
+    <link rel="stylesheet" href="assets/vendor-d41d8cd98f00b204e9800998ecf8427e.css">
+    <link rel="stylesheet" href="assets/personal-site-e575cfdf60d1a1c3e6aeae068397a9de.css">
+  </head>
+  <body>
+    
+
+    <script src="assets/vendor-426255f7438c2994d4a2b194ef894013.js"></script>
+    <script src="assets/personal-site-9a9687138981ffd76b21140bd4325ecb.js"></script>
+  </body>
 </html>
