--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Gaurav Munjal ~ Embreñero</title>
+    <title>Gaurav Munjal ~ Embereño</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -12,12 +12,12 @@
 
 
     <link rel="stylesheet" href="assets/vendor-d41d8cd98f00b204e9800998ecf8427e.css">
-    <link rel="stylesheet" href="assets/personal-site-e575cfdf60d1a1c3e6aeae068397a9de.css">
+    <link rel="stylesheet" href="assets/personal-site-f022f84ed2e4cc5757d4c5567ea97b81.css">
   </head>
   <body>
     
 
     <script src="assets/vendor-2475978fdb6b23c3a848d1bf308c10ba.js"></script>
-    <script src="assets/personal-site-74f14ed7cc6e3930c71e1b9a30815701.js"></script>
+    <script src="assets/personal-site-7a17abe99d18bfebfe1a68fd8985438a.js"></script>
   </body>
 </html>
