--- a/projects/index.html
+++ b/projects/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     
-<meta name="personal-site/config/environment" content="%7B%22modulePrefix%22%3A%22personal-site%22%2C%22environment%22%3A%22production%22%2C%22rootURL%22%3A%22%2F%22%2C%22locationType%22%3A%22auto%22%2C%22EmberENV%22%3A%7B%22FEATURES%22%3A%7B%22EMBER_METAL_TRACKED_PROPERTIES%22%3Atrue%7D%2C%22EXTEND_PROTOTYPES%22%3A%7B%22Date%22%3Afalse%7D%2C%22_APPLICATION_TEMPLATE_WRAPPER%22%3Afalse%2C%22_JQUERY_INTEGRATION%22%3Afalse%2C%22_TEMPLATE_ONLY_GLIMMER_COMPONENTS%22%3Atrue%7D%2C%22APP%22%3A%7B%22name%22%3A%22personal-site%22%2C%22version%22%3A%220.0.0%2Bbe3ddc00%22%7D%2C%22fastboot%22%3A%7B%22hostWhitelist%22%3A%5B%7B%7D%2C%22gaurav0.github.io%22%5D%7D%2C%22exportApplicationGlobal%22%3Afalse%7D" />
+<meta name="personal-site/config/environment" content="%7B%22modulePrefix%22%3A%22personal-site%22%2C%22environment%22%3A%22production%22%2C%22rootURL%22%3A%22%2F%22%2C%22locationType%22%3A%22auto%22%2C%22EmberENV%22%3A%7B%22FEATURES%22%3A%7B%22EMBER_METAL_TRACKED_PROPERTIES%22%3Atrue%7D%2C%22EXTEND_PROTOTYPES%22%3A%7B%22Date%22%3Afalse%7D%2C%22_APPLICATION_TEMPLATE_WRAPPER%22%3Afalse%2C%22_JQUERY_INTEGRATION%22%3Afalse%2C%22_TEMPLATE_ONLY_GLIMMER_COMPONENTS%22%3Atrue%7D%2C%22APP%22%3A%7B%22name%22%3A%22personal-site%22%2C%22version%22%3A%220.0.0%2Baf27ceb6%22%7D%2C%22fastboot%22%3A%7B%22hostWhitelist%22%3A%5B%7B%7D%2C%22gaurav0.github.io%22%5D%7D%2C%22exportApplicationGlobal%22%3Afalse%7D" />
 <script src="/ember-cli-live-reload.js" type="text/javascript"></script>
 <!-- EMBER_CLI_FASTBOOT_TITLE -->  <meta name="ember-cli-head-start" content><title>Projects - Gaurav Munjal - Embereño</title>
 <meta name="ember-cli-head-end" content>
@@ -58,10 +58,10 @@
     </li>
   </ul>
 </footer>
-<script type="x/boundary" id="fastboot-body-end"></script>
+<script type="fastboot/shoebox" id="shoebox-ember-data-storefront">{"queries":{}}</script><script type="x/boundary" id="fastboot-body-end"></script>
 
-    <script src="/assets/vendor-3c66b38843920fe9ef5f3b3974ecc22e.js"></script>
-    <script src="/assets/personal-site-a9d5da2482a3b107840664f9b8b9ff12.js"></script>
+    <script src="/assets/vendor-6babf8312c56af8ae9168fc1f01ffa16.js"></script>
+    <script src="/assets/personal-site-1d2891676e0f7bdf5b06dda94a8fad43.js"></script>
 
     
   </body>
