--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     
-<meta name="personal-site/config/environment" content="%7B%22modulePrefix%22%3A%22personal-site%22%2C%22environment%22%3A%22production%22%2C%22rootURL%22%3A%22%2F%22%2C%22locationType%22%3A%22auto%22%2C%22EmberENV%22%3A%7B%22FEATURES%22%3A%7B%22EMBER_METAL_TRACKED_PROPERTIES%22%3Atrue%7D%2C%22EXTEND_PROTOTYPES%22%3A%7B%22Date%22%3Afalse%7D%2C%22_APPLICATION_TEMPLATE_WRAPPER%22%3Afalse%2C%22_JQUERY_INTEGRATION%22%3Afalse%2C%22_TEMPLATE_ONLY_GLIMMER_COMPONENTS%22%3Atrue%7D%2C%22APP%22%3A%7B%22name%22%3A%22personal-site%22%2C%22version%22%3A%220.0.0%2Baf27ceb6%22%7D%2C%22fastboot%22%3A%7B%22hostWhitelist%22%3A%5B%7B%7D%2C%22gaurav0.github.io%22%5D%7D%2C%22exportApplicationGlobal%22%3Afalse%7D" />
+<meta name="personal-site/config/environment" content="%7B%22modulePrefix%22%3A%22personal-site%22%2C%22environment%22%3A%22production%22%2C%22rootURL%22%3A%22%2F%22%2C%22locationType%22%3A%22auto%22%2C%22EmberENV%22%3A%7B%22FEATURES%22%3A%7B%22EMBER_METAL_TRACKED_PROPERTIES%22%3Atrue%7D%2C%22EXTEND_PROTOTYPES%22%3A%7B%22Date%22%3Afalse%7D%2C%22_APPLICATION_TEMPLATE_WRAPPER%22%3Afalse%2C%22_JQUERY_INTEGRATION%22%3Afalse%2C%22_TEMPLATE_ONLY_GLIMMER_COMPONENTS%22%3Atrue%7D%2C%22APP%22%3A%7B%22name%22%3A%22personal-site%22%2C%22version%22%3A%220.0.0%2B4d6096d9%22%7D%2C%22fastboot%22%3A%7B%22hostWhitelist%22%3A%5B%7B%7D%2C%22gaurav0.github.io%22%5D%7D%2C%22exportApplicationGlobal%22%3Afalse%7D" />
 <script src="/ember-cli-live-reload.js" type="text/javascript"></script>
 <!-- EMBER_CLI_FASTBOOT_TITLE -->  <meta name="ember-cli-head-start" content><title>Gaurav Munjal - Embereño</title>
 <meta name="ember-cli-head-end" content>
@@ -24,9 +24,9 @@
 
 <nav>
   <ul>
-    <li><a href="/" id="ember68" class="active ember-view">Home</a></li>
-    <li><a href="/projects" id="ember69" class="ember-view">Projects</a></li>
-    <li><a href="/resume" id="ember70" class="ember-view">Resume</a></li>
+    <li><a href="/" id="ember71" class="active ember-view">Home</a></li>
+    <li><a href="/projects" id="ember72" class="ember-view">Projects</a></li>
+    <li><a href="/resume" id="ember73" class="ember-view">Resume</a></li>
   </ul>
 </nav>
 <header>
@@ -48,7 +48,7 @@
 </ul>
 <p class="list-header">I have strong leadership skills:</p>
 <ul>
-  <li>I was the technical lead both at work and on several group <a href="/projects" id="ember71" class="ember-view">projects</a>.</li>
+  <li>I was the technical lead both at work and on several group <a href="/projects" id="ember74" class="ember-view">projects</a>.</li>
   <li>I was president of the Access Futures Club at CCNY from 2011-2012, bringing awareness of people with disabilities. We won the Club of the Year Award at CCNY.</li>
   <li>I was president of the <a href="http://ccny.acm.org">CCNY Chapter</a> of <a href="http://acm.org">ACM</a>. I organized our first Game Jam.</li>
 </ul>
@@ -79,10 +79,10 @@
     </li>
   </ul>
 </footer>
-<script type="fastboot/shoebox" id="shoebox-ember-data-storefront">{"queries":{}}</script><script type="x/boundary" id="fastboot-body-end"></script>
+<script type="fastboot/shoebox" id="shoebox-LEdFVCx7fQ">"[{\"id\":1,\"slug\":\"old-school-rpg-demo\",\"title\":\"Old School RPG Demo\",\"thumb\":\"/images/rpg_thumb.jpg\",\"image\":\"/images/rpg.jpg\",\"desc\":\"This is a demo of an old school console style JRPG, perhaps like Dragon Warrior or Final Fantasy for the original NES, written in HTML5.\",\"url\":\"http://gaurav0.github.com/Old-School-RPG-Map\",\"urltext\":\"Play Now\",\"src\":\"https://github.com/Gaurav0/Old-School-RPG-Map\"},{\"id\":2,\"slug\":\"space-em\",\"title\":\"Space ’Em\",\"thumb\":\"/images/spaceem_thumb.png\",\"image\":\"/images/spaceem.png\",\"desc\":\"A simple, fun HTML5 Space Shooter. Playable via keyboard, mouse or touch.\",\"url\":\"http://gaurav0.github.com/ACM-Space-Shooter/spaceshooter.html\",\"urltext\":\"Play Now\",\"src\":\"https://github.com/Gaurav0/ACM-Space-Shooter\"},{\"id\":3,\"slug\":\"infinite-graffiti-wall\",\"title\":\"Infinite Graffiti Wall\",\"thumb\":\"/images/wall_thumb.jpg\",\"image\":\"/images/wall.jpg\",\"desc\":\"A persistent, infinite graffiti wall on which people can collaboratively draw. Written using Python / HTML5 / Google App Engine.\",\"url\":\"http://infinitegraffitiwall.appspot.com\",\"urltext\":\"Try It Now\",\"src\":\"https://bitbucket.org/Gaurav0/infinitegraffitiwall\"}]"</script><script type="x/boundary" id="fastboot-body-end"></script>
 
-    <script src="/assets/vendor-6babf8312c56af8ae9168fc1f01ffa16.js" integrity="sha256-+SeQ5/CiF6TcjIG0x1/IR5eRVl6yR0LuYTHbT5xzPDo= sha512-ODiheB8P0o+/EQavemlB+huZ78fk6h8ZyPqeuflnrXm/7rAqBO/t93+2sNjtyC78KHCnMFN1V6k7iFdXzs+hnQ==" ></script>
-    <script src="/assets/personal-site-1d2891676e0f7bdf5b06dda94a8fad43.js" integrity="sha256-X6dpiBAcXoBvYUMo9e8Vx6Ed/p8q9nFHu5nlttDUVwU= sha512-tv68I2kYnsu5GBUZ+2QDpLXZHIlbioiVOqJ8+ATiJC/QQv4uIl0K7LyUgkVJN9/vtYo0EznTDeEMqQhV9UZS0w==" ></script>
+    <script src="/assets/vendor-3c66b38843920fe9ef5f3b3974ecc22e.js" integrity="sha256-96aOjU/xGvfno848q2EITxUYoC528cC7PcJbLlIoKY4= sha512-0S+p6LR5iQ9P5uLi8O6GUWZs5F5d2oOySPee+d2yNuO2fhQZuBZY90WZI99/SnrkyUh1geZncAwd9VjLlbw8UQ==" ></script>
+    <script src="/assets/personal-site-eabef5a1c42dc55f1975282afe4c1d48.js" integrity="sha256-eW5rB0p90foTW+PSTyGxF0WnStXo67C6RZnsxj/ipwI= sha512-bHi5VdSmuRRCLLhtx2euhG4CPGqXve1rqOHNSQGyNqp68aZrVVcZ+WPdePRSNo1RzruYVe1utIB3OygNXME13g==" ></script>
 
     
   </body>
