--- a/projects/old-school-rpg-demo/index.html
+++ b/projects/old-school-rpg-demo/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     
-<meta name="personal-site/config/environment" content="%7B%22modulePrefix%22%3A%22personal-site%22%2C%22environment%22%3A%22production%22%2C%22rootURL%22%3A%22%2F%22%2C%22locationType%22%3A%22auto%22%2C%22EmberENV%22%3A%7B%22FEATURES%22%3A%7B%22EMBER_METAL_TRACKED_PROPERTIES%22%3Atrue%7D%2C%22EXTEND_PROTOTYPES%22%3A%7B%22Date%22%3Afalse%7D%2C%22_APPLICATION_TEMPLATE_WRAPPER%22%3Afalse%2C%22_JQUERY_INTEGRATION%22%3Afalse%2C%22_TEMPLATE_ONLY_GLIMMER_COMPONENTS%22%3Atrue%7D%2C%22APP%22%3A%7B%22name%22%3A%22personal-site%22%2C%22version%22%3A%220.0.0%2Baf27ceb6%22%7D%2C%22fastboot%22%3A%7B%22hostWhitelist%22%3A%5B%7B%7D%2C%22gaurav0.github.io%22%5D%7D%2C%22exportApplicationGlobal%22%3Afalse%7D" />
+<meta name="personal-site/config/environment" content="%7B%22modulePrefix%22%3A%22personal-site%22%2C%22environment%22%3A%22production%22%2C%22rootURL%22%3A%22%2F%22%2C%22locationType%22%3A%22auto%22%2C%22EmberENV%22%3A%7B%22FEATURES%22%3A%7B%22EMBER_METAL_TRACKED_PROPERTIES%22%3Atrue%7D%2C%22EXTEND_PROTOTYPES%22%3A%7B%22Date%22%3Afalse%7D%2C%22_APPLICATION_TEMPLATE_WRAPPER%22%3Afalse%2C%22_JQUERY_INTEGRATION%22%3Afalse%2C%22_TEMPLATE_ONLY_GLIMMER_COMPONENTS%22%3Atrue%7D%2C%22APP%22%3A%7B%22name%22%3A%22personal-site%22%2C%22version%22%3A%220.0.0%2B4d6096d9%22%7D%2C%22fastboot%22%3A%7B%22hostWhitelist%22%3A%5B%7B%7D%2C%22gaurav0.github.io%22%5D%7D%2C%22exportApplicationGlobal%22%3Afalse%7D" />
 <script src="/ember-cli-live-reload.js" type="text/javascript"></script>
 <!-- EMBER_CLI_FASTBOOT_TITLE -->  <meta name="ember-cli-head-start" content><title>Old School RPG Demo - Projects - Gaurav Munjal - Embereño</title>
 <meta name="ember-cli-head-end" content>
@@ -24,9 +24,9 @@
 
 <nav>
   <ul>
-    <li><a href="/" id="ember100" class="ember-view">Home</a></li>
-    <li><a href="/projects" id="ember101" class="active ember-view">Projects</a></li>
-    <li><a href="/resume" id="ember102" class="ember-view">Resume</a></li>
+    <li><a href="/" id="ember104" class="ember-view">Home</a></li>
+    <li><a href="/projects" id="ember105" class="active ember-view">Projects</a></li>
+    <li><a href="/resume" id="ember106" class="ember-view">Resume</a></li>
   </ul>
 </nav>
 
@@ -60,10 +60,10 @@
     </li>
   </ul>
 </footer>
-<script type="fastboot/shoebox" id="shoebox-ember-data-storefront">{"queries":{}}</script><script type="x/boundary" id="fastboot-body-end"></script>
+<script type="fastboot/shoebox" id="shoebox-LEdFVCx7fQ">"[{\"id\":1,\"slug\":\"old-school-rpg-demo\",\"title\":\"Old School RPG Demo\",\"thumb\":\"/images/rpg_thumb.jpg\",\"image\":\"/images/rpg.jpg\",\"desc\":\"This is a demo of an old school console style JRPG, perhaps like Dragon Warrior or Final Fantasy for the original NES, written in HTML5.\",\"url\":\"http://gaurav0.github.com/Old-School-RPG-Map\",\"urltext\":\"Play Now\",\"src\":\"https://github.com/Gaurav0/Old-School-RPG-Map\"},{\"id\":2,\"slug\":\"space-em\",\"title\":\"Space ’Em\",\"thumb\":\"/images/spaceem_thumb.png\",\"image\":\"/images/spaceem.png\",\"desc\":\"A simple, fun HTML5 Space Shooter. Playable via keyboard, mouse or touch.\",\"url\":\"http://gaurav0.github.com/ACM-Space-Shooter/spaceshooter.html\",\"urltext\":\"Play Now\",\"src\":\"https://github.com/Gaurav0/ACM-Space-Shooter\"},{\"id\":3,\"slug\":\"infinite-graffiti-wall\",\"title\":\"Infinite Graffiti Wall\",\"thumb\":\"/images/wall_thumb.jpg\",\"image\":\"/images/wall.jpg\",\"desc\":\"A persistent, infinite graffiti wall on which people can collaboratively draw. Written using Python / HTML5 / Google App Engine.\",\"url\":\"http://infinitegraffitiwall.appspot.com\",\"urltext\":\"Try It Now\",\"src\":\"https://bitbucket.org/Gaurav0/infinitegraffitiwall\"}]"</script><script type="fastboot/shoebox" id="shoebox-LEdFVCx7InNsdWciOiJvbGQtc2Nob29sLXJwZy1kZW1vIn0">"[{\"id\":1,\"slug\":\"old-school-rpg-demo\",\"title\":\"Old School RPG Demo\",\"thumb\":\"/images/rpg_thumb.jpg\",\"image\":\"/images/rpg.jpg\",\"desc\":\"This is a demo of an old school console style JRPG, perhaps like Dragon Warrior or Final Fantasy for the original NES, written in HTML5.\",\"url\":\"http://gaurav0.github.com/Old-School-RPG-Map\",\"urltext\":\"Play Now\",\"src\":\"https://github.com/Gaurav0/Old-School-RPG-Map\"},{\"id\":2,\"slug\":\"space-em\",\"title\":\"Space ’Em\",\"thumb\":\"/images/spaceem_thumb.png\",\"image\":\"/images/spaceem.png\",\"desc\":\"A simple, fun HTML5 Space Shooter. Playable via keyboard, mouse or touch.\",\"url\":\"http://gaurav0.github.com/ACM-Space-Shooter/spaceshooter.html\",\"urltext\":\"Play Now\",\"src\":\"https://github.com/Gaurav0/ACM-Space-Shooter\"},{\"id\":3,\"slug\":\"infinite-graffiti-wall\",\"title\":\"Infinite Graffiti Wall\",\"thumb\":\"/images/wall_thumb.jpg\",\"image\":\"/images/wall.jpg\",\"desc\":\"A persistent, infinite graffiti wall on which people can collaboratively draw. Written using Python / HTML5 / Google App Engine.\",\"url\":\"http://infinitegraffitiwall.appspot.com\",\"urltext\":\"Try It Now\",\"src\":\"https://bitbucket.org/Gaurav0/infinitegraffitiwall\"}]"</script><script type="x/boundary" id="fastboot-body-end"></script>
 
-    <script src="/assets/vendor-6babf8312c56af8ae9168fc1f01ffa16.js"></script>
-    <script src="/assets/personal-site-1d2891676e0f7bdf5b06dda94a8fad43.js"></script>
+    <script src="/assets/vendor-3c66b38843920fe9ef5f3b3974ecc22e.js"></script>
+    <script src="/assets/personal-site-eabef5a1c42dc55f1975282afe4c1d48.js"></script>
 
     
   </body>
