--- a/projects/ember-twiddle/index.html
+++ b/projects/ember-twiddle/index.html
@@ -8,7 +8,7 @@
 
     
 <meta name="personal-site/config/environment" content="%7B%22modulePrefix%22%3A%22personal-site%22%2C%22environment%22%3A%22production%22%2C%22rootURL%22%3A%22%2F%22%2C%22locationType%22%3A%22auto%22%2C%22EmberENV%22%3A%7B%22FEATURES%22%3A%7B%22EMBER_METAL_TRACKED_PROPERTIES%22%3Atrue%7D%2C%22EXTEND_PROTOTYPES%22%3A%7B%22Date%22%3Afalse%7D%2C%22_APPLICATION_TEMPLATE_WRAPPER%22%3Afalse%2C%22_JQUERY_INTEGRATION%22%3Afalse%2C%22_TEMPLATE_ONLY_GLIMMER_COMPONENTS%22%3Atrue%7D%2C%22APP%22%3A%7B%22name%22%3A%22personal-site%22%2C%22version%22%3A%220.0.0%2B35ceee4f%22%7D%2C%22fastboot%22%3A%7B%22hostWhitelist%22%3A%5B%7B%7D%2C%22gaurav0.github.io%22%5D%7D%2C%22exportApplicationGlobal%22%3Afalse%7D" />
-<!-- EMBER_CLI_FASTBOOT_TITLE -->  <meta name="ember-cli-head-start" content><title>Old School RPG Demo - Projects - Gaurav Munjal - Embereño</title>
+<!-- EMBER_CLI_FASTBOOT_TITLE -->  <meta name="ember-cli-head-start" content><title>Ember Twiddle - Projects - Gaurav Munjal - Embereño</title>
 <meta name="ember-cli-head-end" content>
 
 
@@ -23,9 +23,9 @@
 
 <nav>
   <ul>
-    <li><a href="/" id="ember128" class="ember-view">Home</a></li>
-    <li><a href="/projects" id="ember129" class="active ember-view">Projects</a></li>
-    <li><a href="/resume" id="ember130" class="ember-view">Resume</a></li>
+    <li><a href="/" id="ember168" class="ember-view">Home</a></li>
+    <li><a href="/projects" id="ember169" class="active ember-view">Projects</a></li>
+    <li><a href="/resume" id="ember170" class="ember-view">Resume</a></li>
   </ul>
 </nav>
 
@@ -33,11 +33,11 @@
 
 
 <section>
-  <h1>Old School RPG Demo</h1>
-  <a href="http://gaurav0.github.com/Old-School-RPG-Map"><img src="/images/rpg.jpg" alt></a>
-  <p>This is a demo of an old school console style JRPG, perhaps like Dragon Warrior or Final Fantasy for the original NES, written in HTML5.</p>
-  <p><a href="http://gaurav0.github.com/Old-School-RPG-Map">Play Now</a></p>
-  <p><a href="https://github.com/Gaurav0/Old-School-RPG-Map">View Source Code</a></p>
+  <h1>Ember Twiddle</h1>
+  <a href="https://ember-twiddle.com"><img src="/images/twiddle.png" alt></a>
+  <p>Developer playground for Ember applications; a place where you can code an Ember app, see it run on the fly, and share a link to it with others.</p>
+  <p><a href="https://ember-twiddle.com">Try It Now</a></p>
+  <p><a href="https:github.com/ember-cli/ember-twiddle">View Source Code</a></p>
 </section>
 <footer>
   <ul>
