fix spelling error

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <ul>
   <li>I have been programming since I got my first computer when I was 12.</li>
   <li>When I was supposed to do daily financial reports at work, I automated them instead.</li>
-  <li>After being hired to make an ecommerce site, I integrated complete order processing and automatic printing of shipping labels, saving the smail company over $200,000 annually.</li>
+  <li>After being hired to make an ecommerce site, I integrated complete order processing and automatic printing of shipping labels, saving the small company over $200,000 annually.</li>
   <li>I know over a dozen programming languages. I can learn enough to get by in a new one in just two weeks.</li>
 </ul>
 <p class="list-header">I have strong leadership skills:</p>
